fix(paystack): Install correct react-paystack package and fix import

--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@paystack/inline-js": "^2.22.7",
     "@radix-ui/react-avatar": "^1.1.11",
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-slot": "^1.2.4",
@@ -21,6 +20,7 @@
     "next": "16.0.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-paystack": "^6.0.0",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
