--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "axios": "^1.6.2",
+    "clsx": "^2.1.0",
     "lucide-react": "^0.294.0",
     "next": "latest",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-paystack": "^5.0.0"
+    "react-paystack": "^5.0.0",
+    "tailwind-merge": "^2.2.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
